--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Great DOM Drill</title>
+    <script defer src="./assets/js/script.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Great DOM Drill</title>
-</head>
+  <body>
+    <h1>My favorite franchises</h1>
 
-<body>
-  <h1>My favorite franchises</h1>
-
-  <ul>
-    <li>The Lord of the Rings</li>
-    <li>Harry Potter</li>
-    <li>Final Destination</li>
-    <li>Harry Potter</li>
-    <li>Saw</li>
-    <li>Fast and Furious</li>
-    <li>Hellraiser</li>
-    <li>Nightmare on Elm Street</li>
-    <li>Friday the 13th</li>
-    <li>Twilight</li>
-    <li>Final Destination</li>
-  </ul>
-</body>
-
+    <ul>
+      <li>The Lord of the Rings</li>
+      <li>Harry Potter</li>
+      <li>Final Destination</li>
+      <li>Harry Potter</li>
+      <li>Saw</li>
+      <li>Fast and Furious</li>
+      <li>Hellraiser</li>
+      <li>Nightmare on Elm Street</li>
+      <li>Friday the 13th</li>
+      <li>Twilight</li>
+      <li>Final Destination</li>
+    </ul>
+  </body>
 </html>
